2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 548163 – Nautilus displays wrong error message for too long file
	names

	* glocalfile.c (g_local_file_set_display_name): Correctly set
	error conditions if the new name is e.g. too long. Reported
	by Leonardo Ferreira Fontenelle.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 547481 – g_data_input_stream_read_line behaves not as stated in
	the docs

	* gdatainputstream.c (g_data_input_stream_read_line): Behave as
	documented and include the line end in the returned string. 
	Pointed out by Paul Pogonyshev.

	* tests/data-input-stream.c: Fix the read_line test to test the
	documented behaviour.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* gdesktopappinfo.c (g_app_info_can_delete): Only allow deleting
	files that have been created by g_app_info_create_from_commandline.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 541715 – win32 : patch for warnings and signature problems in 
	recent code
	
	* glocalvfs.c: Avoid unused variables. Pointed out by Jody
	Goldberg.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 562393 – g_buffered_input_stream_read_byte broken if data
	available

	* gbufferedinputstream.c (g_buffered_input_stream_read_byte): Fix
	handling of buffered content.  Patch by Philip Withnall

	* tests/buffered-input-stream.c: Add a testcase for this bug.
	* tests/Makefile.am: And build it

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 561807 – inotify_sub.c :: dup_dirname() fails to remove trailing
	'/'

	* inotify/inotify-sub.c (dup_dirname): Actually strip the trailing
	'/' away. Spotted by Dan Williams.

2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 561375 – Leaks mountpoint description

	* glocalfile.c: (get_mount_info): don't leak the mountpoint description
	string.

2008-11-21  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 561352 – Leak of icon description

	* gcontenttype.c: (g_content_type_get_icon): don't leak the XDG mimetype